public_headers = [
    "include/ignition/physics/sdf/ConstructCollision.hh",
    "include/ignition/physics/sdf/ConstructJoint.hh",
    "include/ignition/physics/sdf/ConstructLink.hh",
    "include/ignition/physics/sdf/ConstructModel.hh",
    "include/ignition/physics/sdf/ConstructVisual.hh",
    "include/ignition/physics/sdf/ConstructWorld.hh",
]

cc_library(
    name = "sdf",
    srcs = public_headers,
    hdrs = public_headers,
    includes = ["include"],
    visibility = ["//visibility:public"],
)
